# board-games

./: CMakeLists.txt  README.md  main.cpp  plan.md
.github/: copilot-instructions.md
include/ai/: gomoku_ai_player.h
include/core/: game_state.h  player.h  turn_engine.h  types.h
include/games/gomoku/: gomoku_state.h
include/games/xiangqi/: xiangqi_state.h  xiangqi_stub.h
include/storage/: history_store.h
include/ui/: human_console_player.h  menu.h
src/ai/: gomoku_ai_player.cpp
src/core/: turn_engine.cpp
src/games/gomoku/: gomoku_state.cpp
src/games/xiangqi/: xiangqi_state.cpp  xiangqi_stub.cpp
src/storage/: history_store.cpp
src/ui/: human_console_player.cpp  menu.cpp
